--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.6.1",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.recorder": "4.0.1",
     "com.unity.render-pipelines.high-definition": "14.0.8",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
